--- a/portfolio-react/src/App.css
+++ b/portfolio-react/src/App.css
@@ -1,5 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
 
+
+/* example taken from https://stackoverflow.com/a/48976550/3466464 */
+/* import what we need to override */
+/* @import "bootstrap/functions";
+@import "bootstrap/variables"; */
+
+/* set the overriding variables */
+/* $grid-breakpoints: (
+  xxxs: 0,
+  xxs: 320px,
+  xs: 568px,
+  sm: 667px,
+  md: 768px,
+  lg: 992px,
+  xl: 1200px,
+  xxl: 1440px,
+  xxxl: 1600px
+) */
+
 .App {
   font-family: 'Source Sans Pro', sans-serif;
 }
