--- a/portfolio-react/src/CSS/Projects.css
+++ b/portfolio-react/src/CSS/Projects.css
@@ -1,3 +1,10 @@
+.projects-section * {
+    /* background: red; */
+    --img-background-color: #b5b6b7;
+    --img-text-color: #333;
+    --img-outline-color: pink;
+}
+
 .projects-section {
     /* height: 100vh; */
     border: 1px solid red;
@@ -18,62 +25,34 @@
 
 .project-image {
     object-fit: cover;
-    /* object-fit: fill; */
-    /* height: 240px; */
-    /* height:200px; */
-    /* border-radius: 1rem; */
-    /* border: 1px solid black; */
-    /* border: 3px solid red; */
     transition: transform .5s ease;
-    /* z-index: 1; */
+
 }
 
-/* 
-.project-image:hover {
-    transform: scale(1.2);
-    visibility: inherit;
-
-} */
-
-
-/* w3 */
 
 .container-transition {
     position: relative;
     overflow: hidden;
     /* width: 50%; */
     border-radius: 1rem;
-    border: 2px solid #dfe6e9;
+    border: 2px solid var(--img-background-color);
     min-height: 250px;
 }
 
-.image {
-    /* opacity: 1; */
-    /* display: block; */
-    /* width: 100%; */
-    /* height: auto; */
-    /* transition: .5s ease; */
-    /* backface-visibility: hidden; */
-    /* transform: scale(1); */
-    /* transition: .25s ease-in-out; */
-
-}
 
 .middle {
     transition: .5s ease-in-out;
-    /* transition: .5s ease-in; */
+
+
     opacity: 0;
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    /* transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%); */
+
     text-align: center;
-    color: black;
-    /* border: 2px sold red; */
-    /* border-radius: 1rem; */
+
 
     display: flex;
     flex-direction: column;
@@ -88,56 +67,43 @@
     transform: scale(1.2);
 }
 
-/* .container-transition .project-image {
-    opacity: 0.8;
-    transform: scale(1.2);
-    border-radius: 1rem;
-} */
-
 .container-transition:hover .middle {
     opacity: 1;
-    background-color: #141c3a;
+    background-color: var(--img-background-color);
 }
 
-.container-transition .middle {
+/* .container-transition .middle {
     opacity: 1;
-    background-color: #141c3a;
-}
+    background-color: var(--img-background-color);
+} */
 
 .text {
-    background-color: #141c3a;
+    background-color: var(--img-background-color);
     padding: .75rem;
-    color: white;
-    font-size: 16px;
-    /* padding: 16px 32px; */
+    font-size: 1rem;
     width: 40%;
     border-radius: .25rem;
-    /* transition: 1s ease-in-out; */
     text-decoration: none;
-    border: 2px solid #b5b6b7;
+    border: 2px solid var(--img-outline-color);
     transition: .25s ease-in-out;
 }
 
 .text-header {
     width: 80%;
-    color: white;
-    /* transition: .5s ease-in-out; */
+    color: var(--img-text-color);
 }
 
 .text:hover {
-    color: white;
-    background-color: #b5b6b7;
+    /* color: white; */
+    /* background-color: #b5b6b7; */
 }
 
 .middle footer {
-    color: white;
+    color: var(--img-text-color);
+    /* color: white; */
     display: flex;
     gap: .7rem;
 
-}
-
-.middle>* {
-    /* border: 1px solid white; */
 }
 
 .middle a svg {
@@ -145,19 +111,18 @@
     bottom: 0;
     right: 0;
     width: 1.5rem;
-    /* border-color: white; */
     margin-right: 22px;
     margin-bottom: 20px;
     transition: .25s ease-in-out;
 }
 
 .middle a:hover {
-    color: #b9b9b9
+    /* color: #b9b9b9 */
 }
 
 
 .middle a {
-    color: white
+    color: var(--img-text-color)
 }
 
 .middle footer span {
@@ -166,6 +131,5 @@
 
 .text-languages {
     letter-spacing: 1px;
-    /* font-size: .3vw + 5px; */
-    font-size: calc(.8rem + .05vw)
+    font-size: calc(.8rem + .02vw)
 }
