--- a/portfolio-react/src/CSS/Projects.css
+++ b/portfolio-react/src/CSS/Projects.css
@@ -37,6 +37,7 @@
     border-radius: 1rem;
     border: 2px solid var(--img-background-color);
     min-height: 250px;
+    --animate-delay: .5s;
 }
 
 
