--- a/portfolio-react/src/CSS/Navbar.css
+++ b/portfolio-react/src/CSS/Navbar.css
@@ -1,6 +1,9 @@
 .navbar {
     border: 1px solid red;
-    height: 10vh;
+    /* height: 10vh; */
+    position: fixed;
+    z-index: 1;
+    width: 100%;
 }
 
 .nav-link {
