--- a/portfolio-react/src/CSS/Home.css
+++ b/portfolio-react/src/CSS/Home.css
@@ -3,55 +3,11 @@
 }
 
 .home-section {
-    border: 1px solid red;
+    /* border: 1px solid red; */
     height: 100vh
 }
 
-.home-col-container {
-    /* border: 1px solid black; */
-}
 
-.home-col {
-    border: 1px solid blue;
-
-}
-
-.home-col-old {
-    overflow: hidden;
-    /* Ensures the content is not revealed until the animation */
-    border-right: .15em solid transparent;
-    /* The typwriter cursor */
-    white-space: nowrap;
-    /* Keeps the content on a single line */
-    margin: 0 auto;
-    /* Gives that scrolling effect as the typing happens */
-    letter-spacing: .15em;
-    /* Adjust as needed */
-    /* animation:
-        typing 4s steps(30, end),
-        blink-caret .75s step-end; */
-    animation: typing 4s steps(30, end) forwards, blinking 1s step-end 7;
-
-
-
-}
-
-/* .home-col {
-    margin: 0 auto;
-    overflow: hidden;
-    animation: typing 3s steps(80, end), blink-caret .85s step-end 6;
-    white-space: nowrap;
-    border-right: .15em solid transparent;
-
-} */
-
-/* .home-col {
-    animation: typing 2.2s steps(23), blink .6s step-end infinite;
-    border-right: 2px solid black;
-    white-space: nowrap;
-    overflow: hidden;
-    color: black;
-} */
 
 
 
@@ -214,11 +170,11 @@
     font-size: 3rem;
     font-weight: 700;
     letter-spacing: 3px;
-    border: 1px solid red;
+    /* border: 1px solid red; */
 }
 
 .heading-subtext {
-    font-size: 1.2rem;
+    font-size: 1.35rem;
     display: block;
     visibility: hidden;
     animation: reveal-subtext 1.5s cubic-bezier(0.77, 0, 0.175, 1) 1s forwards;
