--- a/portfolio-react/src/App.css
+++ b/portfolio-react/src/App.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
 
 
+
 /* example taken from https://stackoverflow.com/a/48976550/3466464 */
 /* import what we need to override */
 /* @import "bootstrap/functions";
@@ -21,6 +22,13 @@
 
 .App {
   font-family: 'Source Sans Pro', sans-serif;
+  --main-color: black;
+  /* --secondary-color: #191645; */
+  --secondary-color: #CDDEFF;
+  --pop-color: #2ed4b3;
+  --dark-pop-color: #2ecaab;
+  /* --tertiary-color: #00d4ff; */
+  --tertiary-color: #180979;
 }
 
 /* #root {
