--- a/portfolio-react/src/CSS/Projects.css
+++ b/portfolio-react/src/CSS/Projects.css
@@ -1,16 +1,19 @@
 .projects-section * {
     /* background: red; */
-    --img-background-color: #b5b6b7;
+    /* --img-background-color: #b5b6b7;
     --img-text-color: #333;
-    --img-outline-color: pink;
+    --img-outline-color: pink; */
 
 }
 
 .projects-section {
     /* height: 100vh; */
-    background-color: aliceblue;
-    border: 1px solid red;
+    /* background-color: var(--secondary-color); */
+    /* border: 1px solid red; */
     min-height: 104vh;
+    color: var(--tertiary-color);
+    color: var(--dark-pop-color);
+    /* color: var(--pop-color) */
 }
 
 .projects-header {
@@ -21,7 +24,7 @@
 }
 
 .project-header-container {
-    --animate-delay: .5s;
+    --animate-delay: .25s;
 }
 
 .project-container {}
@@ -42,9 +45,11 @@
     overflow: hidden;
     /* width: 50%; */
     border-radius: 1rem;
-    border: 2px solid var(--img-background-color);
+    /* border: 1px solid black; */
     min-height: 250px;
-    --animate-delay: .5s;
+    --animate-delay: .25s;
+    /* color:white */
+    color: var(--tertiary-color);
 }
 
 
@@ -70,6 +75,10 @@
     /* object-fit: cover; */
 }
 
+.container-transition:hover {
+    box-shadow: none;
+}
+
 .container-transition:hover .project-image {
     opacity: 0.8;
     transform: scale(1.2);
@@ -77,7 +86,8 @@
 
 .container-transition:hover .middle {
     opacity: 1;
-    background-color: var(--img-background-color);
+    /* background-color: var(--tertiary-color); */
+    background-color: var(--secondary-color);
 }
 
 /* .container-transition .middle {
@@ -92,18 +102,18 @@
     width: 40%;
     border-radius: .25rem;
     text-decoration: none;
-    border: 2px solid var(--img-outline-color);
+    border: 2px solid var(--pop-color);
     transition: .25s ease-in-out;
 }
 
 .text-header {
     width: 80%;
-    color: var(--img-text-color);
+    
 }
 
 .text:hover {
     /* color: white; */
-    /* background-color: #b5b6b7; */
+    background-color: var(--pop-color);
 }
 
 .middle footer {
@@ -124,13 +134,14 @@
     transition: .25s ease-in-out;
 }
 
-.middle a:hover {
-    /* color: #b9b9b9 */
+.middle a {
+    color: white;
+    color: var(--tertiary-color)
 }
 
 
-.middle a {
-    color: var(--img-text-color)
+.middle .github {
+    color: var(--pop-color)
 }
 
 .middle footer span {
