Updated styling for about page

--- a/portfolio-react/src/CSS/Home.css
+++ b/portfolio-react/src/CSS/Home.css
@@ -1,6 +1,3 @@
-.row {
-    /* border: 1px solid red; */
-}
 
 .home-section {
     /* border: 1px solid red; */
@@ -9,10 +6,6 @@
     color: var(--tertiary-color)
 }
 
-
-/* .top-home-heading, .bottom-home-heading {
-    color: var(--tertiary-color)
-} */
 
 
 .top-home-heading {
@@ -70,7 +63,7 @@
     }
 
     50% {
-        border-color: black
+        border-color: var(--tertiary-color)
     }
 
     100% {
@@ -139,29 +132,6 @@
         background-color: pink;
     } */
 }
-
-
-
-
-
-/* @keyframes blink {
-    50% { 
-        border-color: transparent; 
-    }
-} */
-
-/* The typing effect */
-/* @keyframes typing {
-    from {
-        width: 0
-    }
-
-    to {
-        width: 100%;
-    }
-} */
-
-/* The typewriter cursor effect */
 
 
 
