--- a/portfolio-react/src/CSS/Contact.css
+++ b/portfolio-react/src/CSS/Contact.css
@@ -1,32 +1,67 @@
 .contact-section {
     min-height: 100vh;
+    color: var(--tertiary-color);
+    /* text-transform: uppercase; */
+    ;
+
 }
 
 .contact-header {
     font-size: 3rem;
     font-weight: 700;
     letter-spacing: 3px;
+    text-transform: uppercase;
 }
 
 .contact-container {
     /* border: 1px solid black; */
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    /* border: 3px solid var(--tertiary-color); */
+    box-shadow: 1px 1px 5px;
+    border-radius: 1rem;
+    padding: 3rem;
     --animate-delay: .5s;
+    background-color: var(--secondary-color);
 }
 
 .contact-section form {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 1.5rem;
     /* justify-content: center;
     align-items: center;
     border: 1px solid red; */
 }
 
-/* .contact-section form>* {
-    display: flex;
-    flex: 1;
-    border: 1px solid red;
-} */
+
+.contact-section form button {
+    /* border: 2px solid var(--tertiary-color); */
+    /* align-self: start; */
+    background-color: var(--dark-pop-color);
+    color: var(--tertiary-color);
+    font-size: 1rem;
+    font-weight: 600;
+    letter-spacing: 1px;
+    padding: .75rem 1.25rem;
+    border: none;
+    box-shadow: 1px 1px 4px;
+    border-radius: .25rem;
+    /* border: 1px solid #ced4da */
+        transition: .2s ease-in-out;
+    /* box-shadow: 0 10px 30px -15px; */
+}
+
+.contact-section form button:hover {
+    background-color: var(--dark-pop-color);
+    color: var(--tertiary-color);
+    cursor: pointer;
+    transform: translateY(-1px) !important;
+    box-shadow: 1px 1px 10px 1px;
+    
+
+}
 
 .first-row-contact>* {
     /* gap: 1rem */
@@ -34,22 +69,39 @@
 }
 
 #contact-section .form-control {
-    color: var(--header-color) !important;
-    border: 1px solid grey;
+    /* border: 2px solid var(--tertiary-color); */
+    box-shadow: 1px 1px 4px;
     /* border-bottom: 2px solid black; */
-    border-radius: 0 !important;
+    border-radius: .5rem !important;
     /* transition: .5s ease-in-out; */
+}
+
+#contact-section .form-control:focus {
+    /* color: var(--pop-color); */
+    border-color: #1b9e83;
+    box-shadow: 1px 1px 20px #1b9e83;
+    --dark-pop-color: #229780;
+    /* transition: 1s; */
 }
 
 /* #contact-section .form-control:focus {
     border: 1px solid red;
 } */
 
-.form-control:focus {
-    box-shadow: none;
-    border: 1px solid red;
+
+.form-floating {
+    font-weight: 600;
+    letter-spacing: 1px;
 }
 
-/* .form-control:focus+.form-label {
-    color: red;
-} */
+.form-control:focus {
+    box-shadow: none;
+}
+
+.form-floating label {
+    color: var(--tertiary-color);
+}
+
+.form-floating>.form-control:focus~label {
+    opacity: 1;
+}
