--- a/portfolio-react/src/CSS/Home.css
+++ b/portfolio-react/src/CSS/Home.css
@@ -10,7 +10,7 @@
     /* border: 1px solid red; */
     position: absolute;
     left: 50%;
-    top: 80.3%;
+    top: 80.5%;
     bottom: 0;
     transform: translate(-50%, -50%);
     height: 40vh;
@@ -18,9 +18,19 @@
     /* border: 1px solid red; */
 }
 
-#Vector_31 {
 
-    animation: wave 2.5s infinite;
+/* hair left brow right brow */
+#Vector_17, #Vector_15, #Vector_13 {
+    fill: black;
+}
+
+/* glasses frames */
+#Vector_21, #Vector_23 {
+    fill: #3C2A21;
+}
+#Vector_31 {
+    animation: wave 4s 6s infinite;
+    /* animation-delay: 3s; */
     transform-origin: left bottom;
     display: inline-block;
     fill: red;
@@ -29,14 +39,22 @@
     transform: rotate(-5deg);
 }
 
-/* #hand {
-
-    display: inline-block;
-    fill: red;
-    border: 1px solid red;
-    transform-origin: 50% 80%;
-    transform: rotate(-10deg);
+/* #jacky {
+    visibility: hidden;
+    animation: reveal-me 2s ease-in forwards;
 } */
+
+
+#open_eyes >* {
+    animation: eyes-open 2s infinite;
+    /* fill: white */
+    visibility: hidden;
+    transition: 1s;
+}
+
+.hidden {
+    visibility: hidden;
+}
 
 
 
@@ -55,6 +73,42 @@
     }
 
     30% {
+        transform: rotate(2.0deg)
+    }
+    40% {
+        transform: rotate(-2.0deg)
+    }
+    50% {
+        transform: rotate(0deg)
+    }
+    100% {
+        transform: rotate(0deg)
+    }
+}
+
+@keyframes wave-2 {
+    0% {
+        transform: rotate(0.0deg)
+    }
+    5% {
+
+    }
+
+    10% {
+        transform: rotate(1.0deg)
+    }
+
+    15% {
+
+    }
+
+    20% {
+        transform: rotate(-1.0deg)
+    }
+
+    25% {}
+
+    30% {
         transform: rotate(1.0deg)
     }
     100% {
@@ -62,41 +116,6 @@
     }
 }
 
-/* 
-@keyframes wave-animation {
-    0% {
-        transform: rotate(0.0deg)
-    }
-
-    10% {
-        transform: rotate(1.0deg)
-    }
-
-    20% {
-        transform: rotate(-1.0deg)
-    }
-
-    30% {
-        transform: rotate(1.0deg)
-    }
-
-    40% {
-        transform: rotate(-1.0deg)
-    }
-
-    50% {
-        transform: rotate(1.0deg)
-    }
-
-    60% {
-        transform: rotate(0.0deg)
-    }
-
-
-    100% {
-        transform: rotate(0.0deg)
-    }
-} */
 
 .top-home-heading {
     /* width: 15em; */
@@ -241,7 +260,7 @@
     display: block;
     visibility: hidden;
     animation: reveal-subtext 1.5s cubic-bezier(0.77, 0, 0.175, 1) 1s forwards;
-    animation-delay: 5s;
+    animation-delay: 7s;
 }
 
 
@@ -255,7 +274,7 @@
     width: 16rem;
     visibility: hidden;
     animation: reveal-subtext 1.5s cubic-bezier(0.77, 0, 0.175, 1) 1s forwards;
-    animation-delay: 6.5s;
+    animation-delay: 7s;
     /* border-radius: ; */
     transition: .3s linear;
     box-shadow: 0 10px 30px -15px;
