--- a/portfolio-react/src/CSS/Home.css
+++ b/portfolio-react/src/CSS/Home.css
@@ -18,16 +18,59 @@
     /* border: 1px solid red; */
 }
 
+/* .catsvg {
+    border: 1px solid red;
+    height: 50px;
+} */
+.jacky-container {
+    --animate-delay: 3s
+}
+.catsvg>* {
+    position: absolute;
+    border: 1px solid red;
+    /* transform: translate(10px); */
+}
+
+#ewo4eiA5X1Q1 {
+    border: 1px solid red;
+    animation: move 3.6s;
+    /* transform: translate(10px); */
+    /* animation-iteration-count: 1; */
+}
+
+@keyframes move {
+    0% {
+        /* transform: translate(-100px); */
+        left: 0;
+    }
+
+    /* 10% {
+        transform: rotate(1.0deg)
+    }
+
+    20% {
+        transform: rotate(-1.0deg)
+    } */
+
+    100% {
+        left: 50;
+        /* transform: translate(200px) */
+    }
+}
 
 /* hair left brow right brow */
-#Vector_17, #Vector_15, #Vector_13 {
+#Vector_17,
+#Vector_15,
+#Vector_13 {
     fill: black;
 }
 
 /* glasses frames */
-#Vector_21, #Vector_23 {
+#Vector_21,
+#Vector_23 {
     fill: #3C2A21;
 }
+
 #Vector_31 {
     animation: wave 4s 6s infinite;
     /* animation-delay: 3s; */
@@ -45,7 +88,7 @@
 } */
 
 
-#open_eyes >* {
+#open_eyes>* {
     animation: eyes-open 2s infinite;
     /* fill: white */
     visibility: hidden;
@@ -75,12 +118,15 @@
     30% {
         transform: rotate(2.0deg)
     }
+
     40% {
         transform: rotate(-2.0deg)
     }
+
     50% {
         transform: rotate(0deg)
     }
+
     100% {
         transform: rotate(0deg)
     }
@@ -90,17 +136,14 @@
     0% {
         transform: rotate(0.0deg)
     }
-    5% {
 
-    }
+    5% {}
 
     10% {
         transform: rotate(1.0deg)
     }
 
-    15% {
-
-    }
+    15% {}
 
     20% {
         transform: rotate(-1.0deg)
@@ -111,6 +154,7 @@
     30% {
         transform: rotate(1.0deg)
     }
+
     100% {
         transform: rotate(0deg)
     }
@@ -121,14 +165,14 @@
     /* width: 15em; */
     /* text-align: center; */
     display: transparent;
-    animation: typing 1.8s steps(23), blinking .6s step-end 3;
+    /* animation: typing 1.8s steps(23), blinking .6s step-end 3; */
+    animation: typing 1.8s steps(23), blinking .6s step-end 3, reveal 1.5s cubic-bezier(0.77, 0, 0.175, 1) 1.5s forwards;
+    animation-delay: 1.5s;
     border-right: 2px solid transparent;
     white-space: nowrap;
     overflow: hidden;
-    color:
-        /* border-right: .15em solid transparent */
-        /* font-size: ; */
-
+    /* border: 1px solid red; */
+    visibility: hidden;
 }
 
 .bottom-home-heading {
@@ -136,9 +180,10 @@
     border-right: 2px solid transparent;
     white-space: nowrap;
     overflow: hidden;
-    animation-delay: 1.8s;
+    animation-delay: 3.3s;
     display: block;
     visibility: hidden;
+    /* border: 1px solid blue; */
 }
 
 @keyframes typing {
@@ -260,7 +305,7 @@
     display: block;
     visibility: hidden;
     animation: reveal-subtext 1.5s cubic-bezier(0.77, 0, 0.175, 1) 1s forwards;
-    animation-delay: 7s;
+    animation-delay: 8.5s;
 }
 
 
@@ -274,7 +319,7 @@
     width: 16rem;
     visibility: hidden;
     animation: reveal-subtext 1.5s cubic-bezier(0.77, 0, 0.175, 1) 1s forwards;
-    animation-delay: 7s;
+    animation-delay: 8.5s;
     /* border-radius: ; */
     transition: .3s linear;
     box-shadow: 0 10px 30px -15px;
