--- a/portfolio-react/src/App.css
+++ b/portfolio-react/src/App.css
@@ -2,23 +2,6 @@
 
 
 
-/* example taken from https://stackoverflow.com/a/48976550/3466464 */
-/* import what we need to override */
-/* @import "bootstrap/functions";
-@import "bootstrap/variables"; */
-
-/* set the overriding variables */
-/* $grid-breakpoints: (
-  xxxs: 0,
-  xxs: 320px,
-  xs: 568px,
-  sm: 667px,
-  md: 768px,
-  lg: 992px,
-  xl: 1200px,
-  xxl: 1440px,
-  xxxl: 1600px
-) */
 
 .App {
   font-family: 'Source Sans Pro', sans-serif;
@@ -31,45 +14,134 @@
   --tertiary-color: #180979;
 }
 
-/* #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+
+.hidden {
+  visibility: hidden;
+}
+
+.left-media {
+  position: absolute;
+  /* border: 1px solid black; */
+  bottom: 0px;
+  left: 80px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1.75rem;
+}
+
+.left-media a {
+  color: var(--tertiary-color);
+  transition: .2s;
+}
+
+.left-media a:hover,
+.email:hover {
+  color: var(--dark-pop-color);
+  cursor: pointer;
+  transform: translateY(-2px);
+}
+
+.left-media svg {
+  width: 1.5rem;
+  height: 1.5rem;
+  /* border: 1px solid red; */
+  /* color: var(--dark-pop-color) */
+}
+
+.line {
+  border: 1px solid var(--tertiary-color);
+  width: 0px;
+  /* border: none; */
+  height: 125px;
+  /* border-left: 2px solid red; */
+  left: 50px
+}
+
+.right-media {
+  position: absolute;
+  /* border: 1px solid black; */
+  bottom: 0px;
+  right: 80px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: .75rem;
+}
+
+.email {
+  writing-mode: vertical-rl;
+  letter-spacing: .1rem;
+  /* font-weight: 700px; */
+  font-weight: 700;
+  font-size: 1rem;
+  text-decoration: none;
+  color: var(--tertiary-color);
+}
+
+
+/* .new-media {
+  position: absolute;
+  display: flex;
+  gap: 1rem;
+  right: 100px;
+  bottom: 20px;
+}
+
+.new-media svg {
+  width: 1.5rem;
+  height: 1.5rem;
 } */
 
-/* .logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+
+/* body {
+  --sb-track-color: #FFFFFF;
+  --sb-thumb-color: #180979;
+  --sb-size: 10px;
+
+  scrollbar-color: var(--sb-thumb-color) var(--sb-track-color);
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+body::-webkit-scrollbar {
+  width: var(--sb-size);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+body::-webkit-scrollbar-track {
+  background: var(--sb-track-color);
+  border-radius: 100vw;
+  margin-block: .25rem;
 }
 
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+body::-webkit-scrollbar-thumb {
+  background: var(--sb-thumb-color);
+  border-radius: 100vw;
 } */
+
+body {
+  overflow: overlay;
+}
+
+/* .div1 {
+  background: grey;
+  margin-top: 200px;
+  margin-bottom: 20px;
+  height: 20px;
+} */
+
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  /* background: #180979; */
+
+  background: #2ecaab;
+  border-radius: 100vw;
+}
+
+::-webkit-scrollbar-track {
+  background: rgba(0, 0, 0, 0);
+  border-radius: 100vw;
+  margin-block: .1rem;
+}
