--- a/portfolio-react/src/CSS/Home.css
+++ b/portfolio-react/src/CSS/Home.css
@@ -305,3 +305,33 @@
         opacity: 1;
     }
 }
+
+
+
+
+/* .scrollspy {
+    background-color: #515151;
+    margin: 10px;
+    position: fixed;
+    top: 0;
+    right: 0
+  }
+  ul {
+    list-style: none;
+  }
+  li {
+    margin: 10px;
+    padding: 10px 0;
+  }
+  a {
+    color: white;
+  }
+  .isCurrent {
+    font-weight: bold;
+  }
+  
+  /* .isCurrent a, h2 {
+    color: #f1a07a;
+  }  */
+
+  
