--- a/portfolio-react/src/CSS/Projects.css
+++ b/portfolio-react/src/CSS/Projects.css
@@ -72,7 +72,8 @@
     justify-content: center;
     align-items: center;
     gap: 1rem;
-    /* object-fit: cover; */
+    letter-spacing: 1px;
+    font-weight: 600
 }
 
 .container-transition:hover {
@@ -86,17 +87,15 @@
 
 .container-transition:hover .middle {
     opacity: 1;
-    /* background-color: var(--tertiary-color); */
     background-color: var(--secondary-color);
 }
 
 /* .container-transition .middle {
     opacity: 1;
-    background-color: var(--img-background-color);
+    background-color: var(--secondary-color);
 } */
 
 .text {
-    background-color: var(--img-background-color);
     padding: .75rem;
     font-size: 1rem;
     width: 40%;
@@ -108,7 +107,8 @@
 
 .text-header {
     width: 80%;
-    
+    font-size: calc(1rem + .05vw);
+
 }
 
 .text:hover {
@@ -157,5 +157,5 @@
 
 .text-languages {
     letter-spacing: 1px;
-    font-size: calc(.8rem + .02vw)
+    font-size: calc(1rem + .02vw)
 }
